// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component <Accordion /> should allow to click the header 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion__header"
    onClick={[Function]}
  >
    Show Details
  </div>
  <div
    className="accordion__body"
    style={Object {}}
  >
    <div
      className="accordion__body__content"
    >
      Accordion content
    </div>
  </div>
</div>
`;

exports[`component <Accordion /> should render correctly 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion__header"
    onClick={[Function]}
  >
    Show Details
  </div>
  <div
    className="accordion__body"
    style={Object {}}
  >
    <div
      className="accordion__body__content"
    >
      Accordion content
    </div>
  </div>
</div>
`;

exports[`component <Accordion /> should render open initially 1`] = `
<div
  className="accordion accordion--active"
>
  <div
    className="accordion__header"
    onClick={[Function]}
  >
    Show Details
  </div>
  <div
    className="accordion__body"
    style={Object {}}
  >
    <div
      className="accordion__body__content"
    >
      Accordion content
    </div>
  </div>
</div>
`;

exports[`component <Accordion /> should render with custom title 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion__header"
    onClick={[Function]}
  >
    Open me
  </div>
  <div
    className="accordion__body"
    style={Object {}}
  >
    <div
      className="accordion__body__content"
    >
      Accordion content
    </div>
  </div>
</div>
`;
